# canvas-cli

./: .cirrus.yml  Cargo.toml  Dockerfile  README.md  renovate.json
src/: api.rs  canvas_api.rs  config.rs  gradescope.rs  main.rs  progress.rs
