[package]
name = "canvas"
version = "0.1.0"
authors = ["Dan <dan@yellowiki.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11.22", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
lazy_static = "1.4.0"
futures = "0.3.28"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
backoff = { version = "0.4.0", features = ["tokio"] }
colored = "2.0.4"
structopt = "0.3.26"
dirs = "5.0.1"
toml = "0.8.4"
color-eyre = "0.6.2"
toml_edit = "0.2.1"
indicatif = "0.15.0"
generational-arena = "0.2"
serde_path_to_error = "0.1.14"
scraper = "0.17.1"
once_cell = "1.18.0"
