[package]
name = "canvas"
version = "0.1.0"
authors = ["Dan <dan@yellowiki.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.12.3", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
lazy_static = "1.4.0"
futures = "0.3.30"
async-trait = "0.1.79"
chrono = { version = "0.4.37", features = ["serde"] }
backoff = { version = "0.4.0", features = ["tokio"] }
colored = "2.1.0"
structopt = "0.3.26"
dirs = "5.0.1"
toml = "0.8.12"
color-eyre = "0.6.3"
toml_edit = "0.2.1"
indicatif = "0.15.0"
generational-arena = "0.2"
serde_path_to_error = "0.1.16"
scraper = "0.19.0"
once_cell = "1.19.0"
